# compactrs

./: .gitignore  Cargo.toml  README.md  app.debug.manifest  app.manifest  build.rs  build_fix_log.txt  build_log.txt  build_log_2.txt  build_log_3.txt  check_output.txt  err.txt  errors.txt
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: config.rs  json.rs  logger.rs  main.rs  registry.rs  types.rs  updater.rs  utils.rs  watcher_config.rs
src/com/: shell_link.rs
src/engine/: compresstimate.rs  dynamic_import.rs  elevation.rs  estimator.rs  mod.rs  power.rs  process.rs  scanner.rs  watcher.rs  wof.rs  worker.rs
src/gui/: about.rs  builder.rs  console.rs  controls.rs  dialogs.rs  mod.rs  settings.rs  state.rs  taskbar.rs  theme.rs  utils.rs  window.rs
src/gui/components/: file_list.rs
src/ui/: about.rs  builder.rs  console.rs  controls.rs  declarative.rs  dialogs.rs  edit_subclass.rs  file_dialog.rs  framework.rs  handlers.rs  input.rs  layout.rs  mod.rs  settings.rs  shortcuts.rs  state.rs  subclass.rs  taskbar.rs  theme.rs  utils.rs  window.rs  wrappers.rs
src/ui/components/: action_panel.rs  base.rs  file_list.rs  header_panel.rs  mod.rs  panel.rs  search_panel.rs  status_bar.rs
src/ui/dialogs/: about.rs  base.rs  console.rs  context_dialog.rs  force_stop.rs  mod.rs  settings.rs  shortcuts.rs  watcher.rs  watcher_add.rs
