[package]
name = "compactrs"
version = "2025.12.21"
rust-version = "1.94.0"
edition = "2024"
authors = ["Mohammad Farid Hendianto (IRedDragonICY)"]
description = "High-performance native Windows file compressor using WOF (Windows Overlay Filter)"
license = "MIT"
repository = "https://github.com/IRedDragonICY/compactrs"
readme = "README.md"
keywords = ["windows", "compression", "wof", "compactos", "utility"]
categories = ["os::windows-apis", "filesystem", "command-line-utilities"]
[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Storage_Compression",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Power",
    "Win32_System_Ioctl",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_RestartManager",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_Networking_WinHttp",
    "Win32_Security_Authorization",
    "Win32_System_Services",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
] }



[build-dependencies]
winres = "0.1"


[profile.release]
opt-level = "z"          # Optimize for size
lto = "fat"               # Link Time Optimization
codegen-units = 1        # Maximize optimization
panic = "abort"          # No unwinding
strip = true             # Strip symbols
debug = false            # No debug info
overflow-checks = false  # No overflow checks
