#trim-paths UNSUPPORTED on crates
cargo-features = ["panic-immediate-abort"]

[package]
name = "compactrs"
version = "2025.12.24"
rust-version = "1.94.0"
edition = "2024"
authors = ["Mohammad Farid Hendianto (IRedDragonICY)"]
description = "High-performance native Windows file compressor using WOF (Windows Overlay Filter)"
license = "MIT"
repository = "https://github.com/IRedDragonICY/compactrs"
readme = "README.md"
keywords = ["windows", "compression", "wof", "compactos", "utility"]
categories = ["os::windows-apis", "filesystem", "command-line-utilities"]

[dependencies]


# No build-dependencies needed - manual RC compilation in build.rs

# Dev profile - also use abort to simplify no_main linking
[profile.dev]
panic = "abort"

# Release profile - rustflags are in .cargo/config.toml
[profile.release]
opt-level = "z"              # Optimize for size (z is 33KB smaller than s)
lto = "fat"                  # Link Time Optimization
codegen-units = 1            # Maximize optimization
panic = "immediate-abort"    # EXTREME: No panic handler at all
strip = true                 # Strip symbols
debug = false                # No debug info
overflow-checks = false      # No overflow checks
#  trim-paths = "all"           # Remove all paths from binary
